--- a/templates/gallery.html
+++ b/templates/gallery.html
@@ -32,7 +32,7 @@
 <div>
     <form class="login_form" method="post" enctype="multipart/form-data">
         <div class="form-group">
-            <label for="photo">Приложите фотографию</label>
+            <label for="photo">Добавить картинку</label>
             <input type="file" class="form-control-file" id="photo" name="file">
         </div>
         <img src={url_for('static', filename='img/landscape{{count}}.png' )} width=400>
