--- a/templates/gallery.html
+++ b/templates/gallery.html
@@ -8,6 +8,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 <body>
+{% extends "base.html" %} {% block content %}
 <h1 align="center">Пейзажи Марса</h1>
 
 <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
@@ -32,12 +33,13 @@
 <div>
     <form class="login_form" method="post" enctype="multipart/form-data">
         <div class="form-group">
-            <label for="photo">Приложите фотографию</label>
+            <label for="photo">Добавить картинку</label>
             <input type="file" class="form-control-file" id="photo" name="file">
         </div>
         <img src={url_for('static', filename='img/landscape{{count}}.png' )} width=400>
         <button type="submit" class="btn btn-primary">Отправить</button>
     </form>
 </div>
+{% endblock %}
 </body>
 </html>
