--- a/templates/training.html
+++ b/templates/training.html
@@ -1,3 +1,11 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
+</head>
+<body>
 {% extends "base.html" %} {% block content %}
 <h2>
   {% if is_engineer %} Инженерные тренажёры {% else %} Научные симуляторы {%
@@ -7,3 +15,5 @@
   src="{% if is_engineer %}{{ engineer_img_url }}{% else %}{{ science_img_url }}{% endif %}"
 />
 {% endblock %}
+</body>
+</html>
