--- a/templates/distribution.html
+++ b/templates/distribution.html
@@ -4,15 +4,12 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <style>
-        /* Стиль для параграфов */
         p {
-            margin-left: 600px; /* Отступ слева для текста */
-            margin-bottom: 10px; /* Отступ между параграфами */
+            margin-left: 600px;
+            margin-bottom: 10px;
         }
-
-        /* Стиль для заголовка */
         h2 {
-            margin-bottom: 20px; /* Отступ под заголовком */
+            margin-bottom: 20px;
         }
     </style>
 </head>
