--- a/templates/table.html
+++ b/templates/table.html
@@ -3,33 +3,39 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <link rel="stylesheet" type="text/css" href="{{url_for('static', filename='css/table.css')}}">
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/table.css') }}">
 </head>
 <body>
-{% extends "base.html" %} {% block content %}
-<h2 align="center">Оформление каюты</h2>
-<table class="table">
-  <thead>
-    <tr>
-      <th scope="col" class="th1">Цвет стен</th>
-      <th scope="col" class="th1">Эмблема</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr>
-      <td
-        class="color-cell {% if gender == 'female' %}bg-danger{% else %}bg-primary{% endif %} {% if age < 21 %}bg-opacity{% endif %}"
-      ></td>
-      <td class="image-cell">
-        {% if age < 21 %}
-        <img src="{{ child_img_url }}" alt="рисунок" class="drawing" />
-        {% else %}
-        <img src="{{ adult_img_url }}" alt="рисунок" class="drawing" />
-        {% endif %}
-      </td>
-    </tr>
-  </tbody>
-</table>
+{% extends "base.html" %}
+{% block content %}
+<div class="container">
+    <!-- Заголовок -->
+    <h2 class="centered-title">Оформление каюты</h2>
+
+    <!-- Таблица -->
+    <table class="table centered-table">
+        <thead class="th1">
+            <tr>
+                <th scope="col" class="th1">Цвет стен</th>
+                <th scope="col" class="th1">Эмблема</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td
+                    class="color-cell {% if gender == 'female' %}bg-danger{% else %}bg-primary{% endif %} {% if age < 21 %}bg-opacity{% endif %}"
+                ></td>
+                <td class="image-cell">
+                    {% if age < 21 %}
+                    <img src="{{ child_img_url }}" alt="рисунок" class="drawing" />
+                    {% else %}
+                    <img src="{{ adult_img_url }}" alt="рисунок" class="drawing" />
+                    {% endif %}
+                </td>
+            </tr>
+        </tbody>
+    </table>
+</div>
 {% endblock %}
 </body>
 </html>
