--- a/templates/gallery.html
+++ b/templates/gallery.html
@@ -37,7 +37,7 @@
     </div>
 
     <!-- Форма для загрузки изображения -->
-    <div class="mt-5">
+    <div>
         <form class="login_form" method="post" enctype="multipart/form-data">
             <div class="card p-4 mb-3">
                 <label for="photo" class="form-label">Добавить картинку</label>
